@@ -4,6 +4,8 @@
  * Update Czech translations (closes: #743)
  * New password font (closes: #451)
  * Initial material design updates
+ * Prevent screenshots/recent apps preview of password screens
+     (closes: 680, 756)
 
 KeePassDroid (2.0)
  * Remove beta warning
